--- a/App.css
+++ b/App.css
@@ -1,5 +1,8 @@
 body {
+  font-family: "Space Grotesk";
   margin: 0;
+  background-color: #121A21;
+  color: white;
 }
 
 .faded {
@@ -12,4 +15,36 @@ body {
   left: 50%;
   /* bring your own prefixes */
   transform: translate(-50%, -50%);
+}
+
+.input {
+  background-color: #243647;
+  color: #94ADC7;
+  width: 480px;
+  height: 56px;
+  font-size: 20px;
+  padding-left: 20px;
+  box-sizing: border-box;
+
+  border-radius: 12px;
+  border: none;
+  outline: none;
+
+  cursor: pointer;
+}
+
+.button {
+  background-color: #1A80E5;
+  color: white;
+  width: 480px;
+  height: 40px;
+  font-size: 16px;
+  font-weight: bold;
+  box-sizing: border-box;
+  margin-top: 10px;
+
+  border-radius: 12px;
+  border: none;
+  outline: none;
+  cursor: pointer;
 }
