--- a/components/index.scss
+++ b/components/index.scss
@@ -8,6 +8,41 @@
     flex-direction: column;
     align-items: center;
     padding: 30px;
+
+}
+
+.tab-block {
+    width: 600px;
+
+    .tab-header {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        border-bottom: 1px solid #334D66;
+
+        span {
+            color: #334D66;
+            border-bottom: 2px double #334D66;
+            padding-bottom: 5px;
+
+            font-weight: bold;
+            font-size: 16px;
+            cursor: pointer;
+
+            &.active {
+                color: white;
+                border-bottom: 2px double white;
+            }
+        }
+    }
+
+    .tab-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        margin-top: 20px;
+
+    }
 }
 
 .tab-content {
