--- a/App.css
+++ b/App.css
@@ -21,6 +21,7 @@ body {
   background-color: #243647;
   color: #94ADC7;
   width: 480px;
+  max-width: 80vw;
   height: 56px;
   font-size: 20px;
   padding-left: 20px;
@@ -37,6 +38,7 @@ body {
   background-color: #1A80E5;
   color: white;
   width: 480px;
+  max-width: 80vw;
   height: 40px;
   font-size: 16px;
   font-weight: bold;
