--- a/components/index.scss
+++ b/components/index.scss
@@ -65,3 +65,13 @@
 
     }
 }
+
+.tab-check {
+    font-size: 20px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+
+    label {
+        margin-left: 10px;
+    }
+}
