--- a/components/index.scss
+++ b/components/index.scss
@@ -75,3 +75,21 @@
         margin-left: 10px;
     }
 }
+
+footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 0 20px 20px 20px;
+
+    img {
+        margin-right: 10px;
+    }
+}
+
+@media (max-width: 1024px) {
+    .title-page {
+        font-weight: bold;
+        font-size: 20px;
+    }
+}
